--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  background-color: #282d35;
+  color: #ffffff;
+}
+
+.header-bar {
+  background-color: #21222a;
+  height: 91px;
+  padding: 5px 28px;
+}
+
+.nav-bar {
+  display: flex;
+  color: #00d8ff;
+  align-items: center;
+  height: 100%;
+  top: 26;
+  left: 31;
+}
+
+.nav-bar > .nav-logo {
+  width: 28.93px;
+  margin-right: 7px;
+}
+
+.nav-bar > .nav-text {
+  width: 122.39px;
+  height: 22.25px;
+  color: #61dafb;
+  font-size: 1.4rem;
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+}
+
+main {
+  padding: 60px 30px;
+  background-image: url('../public/logo512.png');
+  background-repeat: no-repeat;
+  background-position: right 65%;
+}
+
+main > h1 {
+  margin: 0;
+  font-size: 2.4rem;
+}
+
+.facts-list {
+  margin-top: 46px;
+  max-width: 400px;
+}
+
+.facts-list > li {
+  padding-block: 10px;
+  line-height: 19px;
+}
+
+.facts-list > li::marker {
+  color: #00d8ff;
+  font-size: 1.5rem;
 }
